src/main/resources/static/css/shipwrecks.css
/* Styles that apply to the entire content area */
#mainContainer {
    width: 100%;
    padding: 75px 0 0 0;
}

.body {
    background: #f5f5f5 url("/images/Ships_on_a_rough_sea.jpg") no-repeat bottom;
}

/* Shared styles for the container with the map & the container
   with the details about the selected shipwreck */
.container.googleMapContainer,
#shipwrecks {
    margin-left: 0.5%;
    margin-right: 0.5%;
    width: 49%;
    min-height: 475px;
    float: left;
}

/* Styles for the map area */
.angular-google-map-container {
    height: 455px;
    width: 100%;
}

.container.googleMapContainer {
    border: 10px solid #ffffff;
    box-shadow: 0 0 5px #cccccc;
    padding-left: 0;
    padding-right: 0;
}

/* Styles for the area that holds details about the selected shipwreck */
#shipwrecks {
    padding-left: 5px;
    padding-right: 5px;
    background-color: rgb(248, 248, 248);
    box-shadow: 0 0 5px #cccccc;
    padding-top: 0;
    opacity: 0.9;
    height: 475px;
}

#shipwrecks h1 {
    margin-top: 5px;
    font-size: 45px;
}

#shipwrecks.jumbotron p {
    font-size: 14px;
    font-weight: 100;
}

.noShipwreckSelected {
    font-style: italic;
    text-align: center;
    line-height: 352px;
}

/* The iframe (augh) which displays the Wikipedia article about the selected shipwreck */
#wikipediaFrame {
    width: 100%;
    height: 475px;
}

